--- a/proyectos.html
+++ b/proyectos.html
@@ -14,41 +14,42 @@
 </head>
 
 <body id="proyectos">
-    <header class="conteiner">
-        <nav class="navbar navbar-expand-md mb-4">
+    <header class="container">
+        <nav class="navbar navbar-expand-md  mb-4">
             <div class="container-fluid">
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
+                    <i class="fa-solid fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0 mt-2">
                         <li class="nav-item ">
-                            <a class="nav-link py-1 px-3 px-sm-4" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link px-5 py-2 " aria-current="page" href="index.html">Inicio</a>
+
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link py-1 px-3 px-sm-4" aria-current="page" href="sobre-mi.html">Sobre mí</a>
+                            <a class="nav-link px-5 py-2" aria-current="page" href="sobre-mi.html">Sobre mí</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active py-1 px-3 px-sm-4" href="proyectos.html">Proyectos</a>
+                            <a class="nav-link active px-5 py-2" href="proyectos.html">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link py-1 px-3" href="contacto.html">Contacto</a>
+                            <a class="nav-link px-5 py-2" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                     <div class="d-flex">
 
-                        <a class="btn btn-rojo" type="submit"><i class="fa-solid fa-file-arrow-down"></i>Descargar
-                            mi CV</a>
+                        <a class="btn btn-rojo">Descargar mi
+                            CV<i class="fas fa-download"></i></a>
                     </div>
                 </div>
             </div>
         </nav>
-
     </header>
 
-    <main class="conteiner">
+    <main class="container">
         <div class="row">
             <div class="col-12 pt-3 pb-5">
                 <h1>Proyectos</h1>
@@ -109,18 +110,27 @@
                 </div>
             </div>
     </main>
-    <footer class="conteiner">
-        <div class="row">
-            <div class="col-3"><a href="mailto:magalivictoria85068@gmail.com">magalivictoria85068@gmail.com</a></div>
-            <div class="col-3">Sponsr<a href="https://www.depsuite.com">DePC Suite</a></div>
-            <div class="col-3"><i class="fa-brands fa-linkedin-in"></i></div>
-        
+    <footer class="container mt-5">
+        <div class="row mt-5 pb-3">
+            <div class="col-12 col-sm-3 text-center text-sm-start">
+                <a href="https://github.com" target="_blank" title="Github">
+                    <i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/magali-fernandez-60a207210/" target="_blank" title="Linkedin"><i
+                        class="fab fa-linkedin-in"></i></a>
+            </div>
+        </div>
+        <div class="col-12 col-sm-3 text-center text-sm-start pt-2 p-sm-0"><strong>Sponsor</strong> 
+            <a href="https://www.depsuite.com"><strong>DePC Suite</strong></a>
+        </div>
+        <div class="col-12 col-sm-3 text-sm-start pt-2 p-sm-0">
+            <a href="mailto:magalivictoria85068@gmail.com"><strong>magalivictoria85068@gmail.com</strong></a>
         </div>
     </footer>
-    <div class="whatssap pt-3 pb-4 px-3">
+    <div class="whatsapp pt-3 pb-4 px-3">
         <a href="https://api.whatsapp.com/send?phone=541149172867">
             <i class="fa-brands fa-whatsapp"></i></a>
     </div>
+
 
 </body>
 
